--- a/photos/templates/photos/new_photo.html
+++ b/photos/templates/photos/new_photo.html
@@ -8,9 +8,11 @@
         {% csrf_token %}
         {{ form.as_p }}
         <div>
+            Ya has subido {{ nof }} fotos. Aun puedes subir {{ nof2 }} fotos.
+            <br>
             <button>Subir Foto</button>
         </div>
     </form>
 
-    You have uploaded {{ nof }} pictures.
+
 {% endblock %}
